# Audiobook

./: pyproject.toml
audiobook/: logo.py  main.py  manager.py
tests/: test_manager.py
