[tool.poetry]
name = "audiobook"
version = "0.1.0"
description = ""
authors = ["Edcarloszaya <edcarlos.molequedoido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gtts = "*"
pymupdf = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
